Update tooltip display to prevent flickering

--- a/app/components/data-table/data_table.css
+++ b/app/components/data-table/data_table.css
@@ -30,3 +30,8 @@
 .data_button_wrapper {
 	padding-bottom: 10px;
 }
+
+.data-table-wrapper {
+	font-size: 12px;
+	margin-bottom: 17px;
+}
